# sagemaker-demo

./: .dvcignore  .gitignore  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml
.dvc/: config
.github/workflows/: sagemaker.yaml
data/raw/: penguins.csv.dvc
infra/: app.py  config.py  iam.py  sagemaker.py  storage.py
src/sagemaker_demo/: __init__.py  evaluate.py  inference.py  pipeline.py  prepare_model.py  preprocess.py  train.py
src/sagemaker_demo/cli/: deploy_endpoint.py  pipeline_runner.py  wait_pipeline.py
