[project]
name = "sagemaker-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aapryimak", email = "pryimakaa@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scikit-learn==1.4.2",
    "joblib==1.4.0",
    "boto3==1.34.100",
    "sagemaker==2.215.0",
    "dvc[s3]>=3.59,<4",
    "python-dotenv==1.2.2",
    "pulumi>=3.234.0",
    "pulumi-aws>=7.28.0",
]

[project.scripts]
sagemaker-demo = "sagemaker_demo:main"
run-pipeline = "sagemaker_demo.cli.pipeline_runner:main"
wait-pipeline = "sagemaker_demo.cli.wait_pipeline:main"
deploy-endpoint = "sagemaker_demo.cli.deploy_endpoint:main"


[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
